<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvAppName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvLocationPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="12dp"
        android:text="@string/privacy_notice_dialog_text_location_permission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvCameraPermission"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_camera"
        android:drawablePadding="12dp"
        android:text="@string/privacy_notice_dialog_text_camera_permission"
        app:layout_constraintEnd_toEndOf="@id/tvLocationPermission"
        app:layout_constraintStart_toStartOf="@id/tvLocationPermission"
        app:layout_constraintTop_toBottomOf="@id/tvLocationPermission" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDataUsage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:drawableStart="@drawable/ic_data_usage"
        android:drawablePadding="12dp"
        android:text="@string/privacy_notice_dialog_text_data_collection"
        app:layout_constraintEnd_toEndOf="@id/tvCameraPermission"
        app:layout_constraintStart_toStartOf="@id/tvCameraPermission"
        app:layout_constraintTop_toBottomOf="@id/tvCameraPermission" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGetStarted"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_notice_dialog_btn_get_started"
        app:layout_constraintEnd_toEndOf="@id/tvDataUsage"
        app:layout_constraintTop_toBottomOf="@id/tvDataUsage"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLearnMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/privacy_notice_dialog_btn_learn_more"
        app:layout_constraintTop_toTopOf="@id/btnGetStarted"
        app:layout_constraintBottom_toBottomOf="@id/btnGetStarted"
        app:layout_constraintEnd_toStartOf="@id/btnGetStarted"
        android:layout_marginEnd="16dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>