<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reset_parking_text_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:text="@string/reset_parking_text_description"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="16sp"
        android:layout_marginTop="24dp"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnConfirmResetParking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_parking_btn_confirm"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toBottomOf="@id/tvDescription"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDismissResetParking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_parking_btn_dismiss"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        app:layout_constraintTop_toTopOf="@id/btnConfirmResetParking"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@id/btnConfirmResetParking"
        app:layout_constraintEnd_toStartOf="@id/btnConfirmResetParking"/>

</androidx.constraintlayout.widget.ConstraintLayout>